fixed itemPage title when window gets too small

--- a/itemPage/css/style.css
+++ b/itemPage/css/style.css
@@ -395,7 +395,6 @@ p.lead {
   font-family: Poppins-Bold;
   font-size: 25px;
   color: #333333;
-  line-height: 0;
   text-align: left;
   padding-bottom: 30px;
   text-transform: uppercase;
